--- a/templates/index.html
+++ b/templates/index.html
@@ -3,8 +3,8 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>Strava AeroLabs</title>
-    <link rel="stylesheet" type="text/css" href="{{url_for('static', filename=css/stylesheet.css)}}">
-    <link rel="shortcut icon" href="{{url_for('static', filename=favicon.ico}}">
+    <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/bootstrap.min.css')}}">
+    <link rel="shortcut icon" href="{{url_for('static', filename='favicon.ico')}}">
 </head>
 
     <body class = "index">
@@ -15,7 +15,7 @@
     <!-- <a href=""> -->
     <!--<img src="https://strava.github.io/api/images/LogInWithStrava.png" alt="Strava Login">-->
     <!-- </a> -->
-            <form action="segment_form_action.py" method="get">
+            <form action="segment_form_action.py" method="POST">
                 Enter Segment ID:<br>
                 <input type="text" name="segment_id"><br>
                 <input type="submit" value="Submit">
