--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
     <!-- <a href=""> -->
     <!--<img src="https://strava.github.io/api/images/LogInWithStrava.png" alt="Strava Login">-->
     <!-- </a> -->
-            <form action="segment_form_action.py" method="POST">
+            <form action="segment_form_action.html" method="POST">
                 Enter Segment ID:<br>
                 <input type="text" name="segment_id"><br>
                 <input type="submit" value="Submit">
