Added Full Strava URL functionality, Added Google Map with Polyline for strava segment, added arrow for wind (TODO: Figure out wind rotation),

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,8 +16,8 @@
     <!--<img src="https://strava.github.io/api/images/LogInWithStrava.png" alt="Strava Login">-->
     <!-- </a> -->
             <form action="/windstat" method="POST">
-                Enter Segment ID:<br>
-                <input type="text" name="segment_id"><br>
+                Enter Segment Url:<br>
+                <input type="text" name="segment_url" placeholder="Example: https://www.strava.com/segments/638399"><br>
                 <input type="submit" value="Submit">
             </form>
         </div>
