--- a/templates/windstat.html
+++ b/templates/windstat.html
@@ -6,85 +6,53 @@
 </head>
 <body>
 {% block content %}
-
-{{wind_dict}}
-
-calculated_wind_assist<br>
-{{calculated_wind_assist}}<br><br>
-
-calculated_xwind<br>
-{{calculated_xwind}}<br><br>
-
-google_poly_line<br>
-{{google_poly_line}}<br><br>
-
-<img src= "{{google_img_url}}"><br>
-
-wind<br>
-
-<img class ="wind_arrow" src="{{url_for('static', filename='images/windarrow.png')}}" alt="windarrow.png" height="200"
-        width="200">
-<img class ="course_arrow" src="{{url_for('static', filename='images/windarrow.png')}}" alt="windarrow.png" height="200"
-        width="200">
-<style type = 'text/css'>
-
-    .wind_arrow{
-
+<link rel ="stylesheet" type="text/css" href="{{url_for('static', filename='css/windstat.css')}}">
+<style type="text/css">
+        .wind_arrow{
         -ms-transform: rotate({{wind_dir_deg - 45 + 180}}deg); /* IE 9 */
         -webkit-transform: rotate({{wind_dir_deg - 45 + 180}}deg); /* Chrome, Safari, Opera */
         transform: rotate({{wind_dir_deg - 45 + 180}}deg);
     }
-
     .course_arrow{
-
         -ms-transform: rotate({{course_bearing - 45}}deg); /* IE 9 */
         -webkit-transform: rotate({{course_bearing - 45}}deg); /* Chrome, Safari, Opera */
         transform: rotate({{course_bearing - 45}}deg);
-
     }
 </style>
 
-strava_data<br>
-{{strava_data}}<br><br>
-
-input_segment_id<br>
-{{input_segment_id}}<br><br>
-
-angle_diff<br>
-{{angle_diff}}<br><br>
-
-course_bearing<br>
-{{course_bearing}}<br><br>
-
-{% endblock %}
-
-</body>
-
 <h1 style="text-align: center;">{{strava_data["name"]}}</h1>
 <h2 style="text-align: center;">Time: <span id="time"><script src="{{url_for('static', filename='js/time.js')}}"></script></span></h2>
-<h2 style="text-align: center;">Calculated {{wind_class}}</h2>
+    {% if assist_enum == 1: %}
+    <div id ="strong_tailwind_circle"></div>
+    {% elif assist_enum == 2: %}
+    <div id ="moderate_tailwind_circle"></div>
+    {% elif assist_enum == 3: %}
+    <div id ="moderate_headwind_circle"></div>
+    {% elif assist_enum == 4: %}
+    <div id ="strong_headwind_circle"></div>
+    {% endif %}
+<h2 style="text-align: center;">{{wind_class}}</h2>
 <h3 style="text-align: center;">{{"{0:0.2f}".format(calculated_wind_assist)}} mph</h3>
-<h2 style="text-align: center;">Calculated Crosswind</h2>
-<h3 style="text-align: center;">{{"{0:0.2f}".format(calculated_wind_assist)}} mph</h3>
-<p>&nbsp;</p>
+<h2 style="text-align: center;">Crosswind</h2>
+<h3 style="text-align: center;">{{"{0:0.2f}".format(calculated_xwind)}} mph</h3>
 <p style="text-align: center;"><img src="{{google_img_url}}" alt="Strava Google Map" width="300" height="300" /></p>
-<table style="height: 44px; margin-left: auto; margin-right: auto;" width="208">
+<table style="margin-left: auto; margin-right: auto; height: 360px; width: 720px;">
 <tbody>
 <tr>
-<td style="text-align: center;">
+<td style="text-align: center; width: 50%;">
 <h3>Course Bearing</h3>
 <h4>{{course_bearing}}°</h4>
 </td>
-<td style="text-align: center;">
+<td style="text-align: center; width: 50%">
 <h3>Wind</h3>
 <h4>{{wind_dir_deg}}° at {{wind_speed_mph}} mph</h4>
 </td>
 </tr>
 <tr>
-<td><img src="{{url_for('static', filename='images/windarrow.png')}}" alt="windarrow.png"
-         class= course_arrow width="250" height="250"  /></td>
-<td><img src="{{url_for('static', filename='images/windarrow.png')}}" alt="windarrow.png"
-         class= wind_arrow width="250" height="250" /></td>
+<td class= arrow_box><img src="{{url_for('static', filename='images/windarrow.png')}}" alt="windarrow.png"
+         class= course_arrow width="180" height="180"  /></td>
+<td class= arrow_box><img src="{{url_for('static', filename='images/windarrow.png')}}" alt="windarrow.png"
+         class= wind_arrow width="180" height="180" /></td>
 </tr>
 </tbody>
 </table>
@@ -92,5 +60,5 @@ course_bearing<br>
 <p style="text-align: center;">&nbsp;</p>
 <p style="text-align: center;">&nbsp;</p>
 
-
+{% endblock %}
 </html>
