--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
     <!-- </a> -->
             <form action="/windstat" method="POST">
                 Enter Segment Url:<br>
-                <input type="text" class="textbox" name="segment_url" placeholder="https://www.strava.com/segments/638399"><br><br>
+                <input type="text" class="textbox" name="segment_url" placeholder="https://www.strava.com/segments/638399" required><br><br>
                 <input type="submit" value="Get Aero Data!">
             </form>
         </div>
