Updated comments and minor code revisions for V1.0 to go live! 10/17/2016 9:31PM EST

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,8 @@
         <h1>Strava AeroLabs</h1>
             <form action="/windstat" method="POST">
                 Enter Segment Url:<br>
-                <p><input type="text" class="textbox" name="segment_url" placeholder="https://www.strava.com/segments/638399" required><br></p>
+                <p><input type="text" class="textbox" name="segment_url" placeholder="--------" required><br></p>
+                <p><small>example: https://www.strava.com/segments/638399</small></p>
                 <p><input type="submit" value="Get Aero Data!"></p>
             </form>
         </div>
