--- a/templates/index.html
+++ b/templates/index.html
@@ -20,6 +20,18 @@
         <div style="text-align: center"><p><br>To search for a segment click here!<br></p></div>
         <div style="text-align: center"><a href="https://www.strava.com/segments/search" target="_blank">
     <button type="button" class="404button">Segment Search</button></a></div>
+
+    <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-86136802-1', 'auto');
+  ga('send', 'pageview');
+
+    </script>
+
     </body>
 
         <style type="text/css">
