--- a/templates/windstat.html
+++ b/templates/windstat.html
@@ -5,6 +5,18 @@
     <title>Segment Wind Data</title>
 </head>
 <body>
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-86136802-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
+
 {% block content %}
 <link rel ="stylesheet" type="text/css" href="{{url_for('static', filename='css/windstat.css')}}">
 <style type="text/css">
