--- a/templates/register.html
+++ b/templates/register.html
@@ -1,7 +1,7 @@
 {% extends "header.html" %}
 
 {% block body %}
-
+# TODO: Not finished
 <body>
     <div class = "container">
         <h4>Register</h4>
